<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="med_arrays">
        <item>Tonogén</item>
        <item>Noradrenalin</item>
        <item>Dopamin</item>
        <item>NitroPohl</item>
        <item>Propofol</item>
        <item>Cordarone</item>

    </string-array>
    <string-array name="med_perf_spinner">
        <item>Mg/Hr</item>
        <item>Mg/min</item>
        <item>Mcg/Min</item>
        <item>Mcg/Hr</item>
        <item>Mcg/Kg/Hr</item>
        <item>Mcg/Kg/Min</item>
        <item>Mg/Kg/Hr</item>
        <item>Mg/Kg/Min</item>

    </string-array>
    <string-array name="guideline_chose_dialog">
        <item>Módosítás</item>
        <item>Új listaelem hozzáadása</item>
        <item>Kép letöltése</item>
        <item>Törlés</item>

    </string-array>
    <string-array name="guideline_chose_dialog_li">
        <item>Duplikáció</item>
        <item>Törlés</item>
    </string-array>
    <string-array name="vein_arrays">
        <item>24G Sárga</item>
        <item>22G Kék</item>
        <item>20G Rózsaszín</item>
        <item>18G Zöld</item>
        <item>16G Szürke</item>
        <item>14G Narancssárga</item>

    </string-array>
    <string-array name="et_arrays">
        <item>10.0</item>
        <item>9.5</item>
        <item>9.0</item>
        <item>8.5</item>
        <item>8.0</item>
        <item>7.5</item>
        <item>7.0</item>
        <item>6.5</item>
        <item>6.0</item>
        <item>5.5</item>
        <item>5.0</item>
        <item>4.5</item>
        <item>4.0</item>
        <item>3.5</item>
        <item>3.0</item>
        <item>2.5</item>
        <item>2.0</item>
    </string-array>
    <string-array name="lar_size">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string name="app_name">OMSZ Applikáció</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Országos Mentőszolgálat</string>
    <string name="nav_header_subtitle">Prehospitális sérült- és betegellátást támogató applikáció</string>
    <string name="action_sign_in_short">Regisztráció</string>
    <string name="email">Email</string>
    <string name="minimum_password">Minimum 6 karakter!</string>
    <string name="auth_failed">Sikertelen azonosítás</string>
    <string name="change_email">E-mail csere</string>
    <string name="change_password">jelszó csere</string>
    <string name="send_password_reset_email">Új e-mail cím beállítása</string>
    <string name="remove_user">Fiók törlése</string>
    <string name="new_pass">Új jelszó</string>
    <string name="title_activity_login">Bejelentkezés</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">jelszó</string>
    <string name="hint_name">Teljes név</string>
    <string name="btn_login">Bejelentkezés</string>
    <string name="btn_link_to_register"> Regisztráció </string>
    <string name="btn_link_to_login">Már regisztráltam, bejelentkezés</string>
    <string name="title_activity_reset_password">Új jelszó</string>
    <string name="btn_forgot_password">Elfelejtettem a jelszavam</string>
    <string name="btn_reset_password">Új jelszó küldése </string>
    <string name="hint_new_email">Új e-mail</string>
    <string name="btn_change">CSERE</string>
    <string name="btn_send">ELTÁVOLÍTÁS</string>
    <string name="btn_sign_out">KIJELENTKEZÉS</string>
    <string name="lbl_forgot_password">Elfelejtett jelszó?</string>
    <string name="forgot_password_msg">Adja meg az e-mail címét</string>
    <string name="prompt_password">gyors jelszó</string>
    <string name="btn_remove">eltávolítás</string>
    <string name="parameters">Paraméterek</string>
    <string name="log_out">Kijelentkezés</string>
    <string name="title_activity_perfusor">PerfusorActivity</string>
    <string name="repassword">jelszó ismét</string>
    <string name="remove_all_menu">összes törlése</string>
    <string name="create_todo_menu">új</string>
    <string name="create_todo_title">cím</string>
    <string name="create_todo_description">leírás</string>
    <string name="create_todo_assignee">felelős</string>
    <string name="create_todo_button">Létrehoz</string>
    <string name="give_ml_into_vein_activity"> ml adható be </string>
    <string name="in_minutes_vein_activity"> perc alatt </string>
    <string name="exception_vein_activity">Legalább egy mező kitöltése kötelező, és a mellette lévő gomb megnyomandó</string>
    <string name="min_give_into_ml_vein_activity"> perc alatt adható be </string>
    <string name="ml_infusion_vein_activity"> ml folyadék </string>
    <string name="G24">24G Sárga</string>
    <string name="G22">22G Kék</string>
    <string name="G20">20G Rózsaszín</string>
    <string name="G18">18G Zöld</string>
    <string name="G16">16G Szürke</string>
    <string name="roku_dose_rsi_activity">Rocuronium adagja:</string>
    <string name="question_half_dose_rsi_activity">Felezett adag?</string>
    <string name="question_original_dose_rsi_activity">Eredeti adag?</string>
    <string name="roku_half_dose_rsi_activity">Rocuronium felezett adagja:</string>
    <string name="yaer_weight">év, tömege:</string>
    <string name="the_childs_age_rsi_activity">A gyermek kora:</string>
    <string name="newlyborn_and_weight">Újszülött 3.5kg</string>
    <string name="child_age_rsi_activity">A gyermek kora:</string>
    <string name="year_weight_seven_kg_rsi_activity">év, tömege: 7kg</string>
    <string name="lma_6_rsi_a">LMA, mérete: 6</string>
    <string name="lma_5_rsi_a">LMA, mérete: 5</string>
    <string name="lma_4_rsi_a">LMA mérete: 4</string>
    <string name="lma_3_rsi_a">LMA, mérete: 3</string>
    <string name="lma_2_5_rsi_a">LMA, mérete: 2.5</string>
    <string name="lma_2_rsi_a">LMA, mérete: 2.0</string>
    <string name="lma_1_5_rsi_a">LMA, mérete: 1.5</string>
    <string name="lma_1_rsi_a">LMA, mérete: 1.0</string>
    <string name="lar_3_rsi_a">Laringoskóp, mérete: 3</string>
    <string name="lar_2_rsi_a">Alternativ lapoc, mérete: 2</string>
    <string name="lar_size_rsi_a">Laringoskóp, mérete:</string>
    <string name="lar_sec_size_rsi_a">Alternativ lapoc, mérete:</string>
    <string name="ket_max_dose_rsi_a">Ketamin dózisa: 200mg (maximum dózis)</string>
    <string name="eto_dose_rsi_a">Etomidate:</string>
    <string name="ket_dose_rsi_a">Ketamin dózisa:</string>
    <string name="eto_max_dose_rsi_a">Etomidate adagja 20 mg (maximum dózis)</string>
    <string name="ket_dose_rsi_a2">Ketomidate:</string>
    <string name="eto_dose_rsi_a3">Etomidate dózisa:</string>
    <string name="eto_dose_rsi_a2">Etomidate:</string>
    <string name="keto_dose_rsi_a2">Ketomidate:</string>
    <string name="suk_max_dose_rsi_a">Szukcinilkolin adagja: 200mg (maximum dózis)</string>
    <string name="szuk_dose_rsi_a">Szukcinilkolin adagja:</string>
    <string name="roku_dose_rsi_a">Rokuronium adagja:</string>
    <string name="roku_dose_rsi_a2">Rocuronium adagja:</string>
    <string name="send_new_mail_main_login_a">Új E-mail Küldés</string>
    <string name="send_new_pw_login_main_a">Új jelszó Küldés</string>
    <string name="email_resetpw_a">E-mail!</string>
    <string name="thisisnotemail_reserpw_a">Nem e-mail címet adott meg!</string>
    <string name="sendind_email_reserpw_a">E-mail elküldve!</string>
    <string name="unsuccesful_experiment_resetpw_a">Sikertelen kisérlet!</string>
    <string name="validate_email_string" tools:ignore="TypographyDashes"><![CDATA[^[a–zA–Z0-9.!#$%&\'*+/=?^_`{|}~-]+@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$]]></string>
    <string name="del_your_profile_main_a">Profilja törölve lett, Nincs jogosultsága az alkalmazás használatához!</string>
    <string name="create_medication_name_alert">Alfanumerkius, ill. )(/.,+-*_%}{ karaktereket használjon!</string>
    <string name="abcde60">Az idegrendszer vizsgálat elemei :</string>
    <string name="abcde61">- Pupillák vizsgálata</string>
    <string name="abcde62">- Pontos kezdeti GCS felvétele</string>
    <string name="abcde63">(lehetőleg gysz adása előtt, fájdalominger a supraorbitális ideg kilépési pontjának nyomása, mindig a legmasabb érték rögzítendő, minden változást gondosan dokumentálnunk kell)</string>
    <string name="abcde64">- Oldaliság vizsgálata</string>
    <string name="abcde65">(bulbusok helyzete, arc aszimetriája, végtagmozgások felszólításra és fájdalomingerre (első vizsgálat során nincs mód részletes érzés-mozgás eltérés vizsgálatára))</string>
    <string name="abcde66">- Vércukorérték meghatározása a kanül tűjéből vett vérből</string>
    <string name="abcde67">- Megtartott tudatú betegnél gerincsérülés gyanúja esetén részletesebb vizsgálat az idegrendszeri eltérések, így a sérülés magasságának azonosítására</string>
    <string name="abcde68">- A vércukor mérése megváltozott tudatú sérült esetén kiemelt fontosságú.</string>
    <string name="abcde70">Egyéb vizsgálatok:</string>
    <string name="abcde71">- Testhömérséklet megitélése tapintással (súlyos hipotermia-magas láz kizárása)</string>
    <string name="abcde72">- Egyéb célzott vizsgálatok:</string>
    <string name="abcde73">- 12-es EKG</string>
    <string name="abcde74">- Szívhang</string>
    <string name="abcde76">- A has vizsgálata tapintással</string>
    <string name="abcde77">- Ödéma, anasarca felismerése</string>
    <string name="abcde78">- Sérülés keresése olyan betegnél, akit nem sérültként vizsgálunk</string>
    <string name="abcde79">- Körülmények vizsgálata</string>
    <string name="abcde791">- Anamnézis felvétele (SAMPLE)</string>
    <string name="abcde792">- Hömérsékelt mérése műszerrel</string>
    <string name="abcde793">ABCD problémák elhárítása esetén, ha elég idő áll rendelkezésre, vagy út közben:</string>
    <string name="abcde794">- A hát vizsgálata egyedül penetráló trauma, ill. annak gyanúja esetén szükséges</string>
    <string name="abcde795">-További sérülések, például disztális végtag-törések, sebek felismerése</string>
    <string name="abcde796">(12 elvezetéses EKG készítése súlyos sérült esetén az időveszteség és a következmények hiánya miatt nem indokolt)</string>
    <string name="abcde797">- kihülés elleni védelem biztosítása</string>
    <string name="abcde90">Helyszín biztonságos?</string>
    <string name="abcde91">- egyéni védőfelszerelés</string>
    <string name="abcde92">- sz.e. azonnali kimentés</string>
    <string name="abcde93">Megközelítés</string>
    <string name="abcde94">- bőrszín, légzésszám, mozgás, AVPU</string>
    <string name="abcde95">Meghatározandó:</string>
    <string name="abcde96">-Resuscitatív, kritikus, egyértelműen stabil ABCD állapot,</string>
    <string name="abcde97">- valamint, hogy a beteg sérült-e,</string>
    <string name="abcde98">- mi lehet a sérülés/megbetegedés megközelítő mechanizmusa</string>
    <string name="abcde99">Sérülés gyanúja esetén kiegészítendő:</string>
    <string name="abcde990">- cABCDE jelentős külső vérzés csillapítása direkt nyomással</string>
    <string name="abcde991">- ccABCDE döntés a nyaki gerinc rögzítéséről (MILS), amennyiben a mechanizmus alapján sérülése nem zárható ki</string>
    <string name="abcde992">- mindenkettő delegálható</string>
    <string name="abcde201">- Eltér a klasszikus belgyógyászati vizsgálattól</string>
    <string name="abcde0">- Szisztematikus</string>
    <string name="abcde203">- ABCDE sorrendű</string>
    <string name="abcde204">- gyors vizsgálat</string>
    <string name="abcde206">Azonosítani a közvetlen, potenciális életveszélyt,valamint a sürgős beavatkozást igénylő problémákat</string>
    <string name="omsz_logo">omsz_logo</string>
</resources>