<?xml version="1.0" encoding="utf-8"?><android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde70"
        android:textColor="@color/text_green"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde71"
        android:textColor="@color/text_green"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde72"
        android:textColor="@color/text_red"
        android:textStyle="italic" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde73"
        android:textColor="@color/text_green"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde74"
        android:textColor="@color/text_green"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde76"
        android:textColor="@color/text_green"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde77"
        android:textColor="@color/text_green"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde78"
        android:textColor="@color/text_green"
        android:textStyle="italic" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde79"
        android:textColor="@color/text_green"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde791"
        android:textColor="@color/text_green"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde792"
        android:textColor="@color/text_blue"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde793"
        android:textColor="@color/text_orange"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde794"
        android:textColor="@color/text_orange"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde795"
        android:textColor="@color/text_orange"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde796"
        android:textColor="@color/text_red"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abcde797"
        android:textColor="@color/text_blue"
        android:textStyle="italic" />




</LinearLayout></android.support.v4.widget.NestedScrollView>