<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:fitsSystemWindows="true"
    tools:context="hu.oszkarpap.dev.android.omsz.omszapp001.login.LoginActivity">

    <LinearLayout
        android:isScrollContainer="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ambulance_vehicle"
            android:contentDescription="@string/omsz_logo" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"
            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:text="@string/btn_login"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:textAllCaps="false"
            android:textStyle="normal"
            android:textColor="@color/colorAccent" />


        <Button
            android:id="@+id/btn_reset_password"
            android:text="@string/btn_forgot_password"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:textAllCaps="false"
            android:textStyle="normal"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:text="@string/btn_link_to_register"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:textAllCaps="false"
            android:textStyle="normal"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>