<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context="hu.oszkarpap.dev.android.omsz.omszapp001.main.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ambulance_vehicle" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPasswordLayout"
            app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"

            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etRepasswordLayout"
            app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"

            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/repassword"
                android:imeOptions="actionUnspecified"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>






        <Button
            android:id="@+id/sign_up_button"
            android:text="@string/action_sign_in_short"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:textAllCaps="false"
            android:textStyle="normal"
            android:textColor="@color/colorAccent"
             />

        <Button
            android:id="@+id/btn_reset_password"
            android:text="@string/btn_forgot_password"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:textAllCaps="false"
            android:textStyle="normal"
            android:textColor="@color/colorAccent"
            />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:text="@string/btn_link_to_login"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:textAllCaps="false"
            android:textStyle="normal"
            android:textColor="@color/colorAccent"
             />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>